<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/infoToolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/appToolbarTextColor"
        android:background="@color/appToolbarBackGround">
    </androidx.appcompat.widget.Toolbar>

    <!-- Layout for content is here. This can be a RelativeLayout  -->


<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">



<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/tiedotContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackGround"
    tools:context=".Info">

    <EditText
        android:id="@+id/infoNote"
        android:layout_width="350dp"
        android:layout_height="136dp"
        android:enabled="false"
        android:fontFamily="@font/share"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:text="@string/underConstruction"
        android:hint="@string/hintnotes"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/infoNoteText"
        app:layout_constraintTop_toBottomOf="@+id/infoNoteText" />

    <EditText
        android:id="@+id/infoIDNum"
        android:layout_width="184dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:enabled="false"
        android:fontFamily="@font/share"
        android:gravity="center_vertical"
        android:inputType="number"
        android:textSize="24sp"
        android:hint="@string/hintIDnum"
        app:layout_constraintStart_toEndOf="@+id/infoReg"
        app:layout_constraintTop_toTopOf="@+id/infoReg" />

    <TextView
        android:id="@+id/infoIDNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/share"
        android:text="@string/microChipID"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/infoIDNum"
        app:layout_constraintStart_toStartOf="@+id/infoIDNum" />

    <EditText
        android:id="@+id/infoReg"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:enabled="false"
        android:fontFamily="@font/share"
        android:gravity="center_vertical"
        android:textSize="24sp"
        android:hint="@string/hintDogReg"
        app:layout_constraintStart_toStartOf="@+id/infoRegText"
        app:layout_constraintTop_toBottomOf="@+id/infoRegText" />

    <EditText
        android:id="@+id/infoWeight"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:enabled="false"
        android:fontFamily="@font/share"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/hintWeight"
        android:text="@string/underConstruction"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/infoBirth"
        app:layout_constraintTop_toTopOf="@+id/infoBirth" />

    <EditText
        android:id="@+id/infoBirth"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:enabled="false"
        android:fontFamily="@font/share"
        android:hint="@string/hintBirthday"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="date"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/infoNickName"
        app:layout_constraintTop_toTopOf="@+id/infoNickName"
        android:focusable="false"
        android:onClick="showDatePickerDialog"
        />

    <TextView
        android:id="@+id/infoNoteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/share"
        android:text="@string/notesBeHere"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/infoReg"
        app:layout_constraintTop_toBottomOf="@+id/infoReg" />

    <TextView
        android:id="@+id/infoWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/share"
        android:text="@string/weight"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/infoWeight"
        app:layout_constraintStart_toStartOf="@+id/infoWeight" />

    <TextView
        android:id="@+id/infoBirthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/share"
        android:text="@string/birthday"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/infoBirth"
        app:layout_constraintStart_toStartOf="@+id/infoBirth"
        />

    <EditText
        android:id="@+id/infoKennelName"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:enabled="false"
        android:hint="@string/hintKennelName"
        android:fontFamily="@font/share"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/infoKennelNameText"
        app:layout_constraintTop_toBottomOf="@+id/infoKennelNameText" />

    <TextView
        android:id="@+id/infoRegText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/share"
        android:text="@string/regNumberText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/infoKennelName"
        app:layout_constraintTop_toBottomOf="@+id/infoKennelName" />

    <TextView
        android:id="@+id/infoNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/share"
        android:text="@string/nickname"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/infoNickName"
        app:layout_constraintStart_toStartOf="@+id/infoNickName" />

    <TextView
        android:id="@+id/infoKennelNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/share"
        android:text="@string/kennelName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/infoNickName"
        app:layout_constraintTop_toBottomOf="@+id/infoNickName" />

    <ImageView
        android:id="@+id/infoDogImage"
        android:layout_width="413dp"
        android:layout_height="245dp"
        android:longClickable="false"
        android:scaleType="centerCrop"
        android:contentDescription="@string/profilepic"
        android:src="@drawable/whitedog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/infoNickName"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:hint="@string/hintNickname"
        android:fontFamily="@font/share"
        android:gravity="center_vertical"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoDogImage" />

    <ListView
        android:layout_width="201dp"
        android:layout_height="61dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/infoNote"
        app:layout_constraintTop_toTopOf="@+id/infoNote" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</LinearLayout>