<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/medicateToolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/appToolbarTextColor"
        android:background="@color/appToolbarBackGround">
    </androidx.appcompat.widget.Toolbar>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/laakitysConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackGround"
        tools:context=".Medicate">

        <TextView
            android:id="@+id/medDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share"
            android:text="@string/date"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/medDate"
            app:layout_constraintStart_toStartOf="@+id/medDate" />

        <TextView
            android:id="@+id/medTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/share"
            android:text="@string/time"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/medTime"
            app:layout_constraintStart_toStartOf="@+id/medTime"
            app:layout_constraintTop_toBottomOf="@id/medDogImage"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/medFoodText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share"
            android:text="@string/nickname"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/medDog"
            app:layout_constraintStart_toStartOf="@+id/medDog" />

        <TextView
            android:id="@+id/medAmountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share"
            android:text="@string/amount"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/medAmount"
            app:layout_constraintStart_toStartOf="@+id/medAmount" />


        <ImageView
            android:id="@+id/medDogImage"
            android:layout_width="413dp"
            android:layout_height="245dp"
            android:contentDescription="@string/profilepic"
            android:longClickable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/whitedog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/whitedog" />

        <EditText
            android:id="@+id/medTime"
            android:layout_width="61dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:backgroundTint="#000000"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:fontFamily="@font/share"
            android:hint="@string/hintTime"
            android:inputType="time"
            android:maxLength="5"
            android:onClick="timeButton"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medTimeText"


            />

        <EditText
            android:id="@+id/medDate"
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:ems="10"
            android:fontFamily="@font/share"
            android:inputType="date"
            android:hint="@string/hintdate"
            android:textSize="24sp"
            android:focusable="false"
            android:onClick="showDatePickerDialog"
            android:enabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/medTime"
            app:layout_constraintTop_toTopOf="@+id/medTime"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/medBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:height="55dp"
            android:fontFamily="@font/share"
            android:text="@string/save"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/medDate"
            app:layout_constraintTop_toTopOf="@+id/medDate"
            app:layout_constraintVertical_bias="0.0" />
<!--Unnecessary field But screws up layout if removew-->
        <EditText
            android:id="@+id/medDog"
            android:layout_width="218dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:editable="false"
            android:ems="10"
            android:fontFamily="@font/share"
            android:inputType="textPersonName"
            android:singleLine="false"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medTime" />

        <EditText
            android:id="@+id/medAmount"
            android:layout_width="83dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:fontFamily="@font/share"
            android:gravity="center"
            android:inputType="number"
            android:hint=""
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/medDog"
            app:layout_constraintTop_toTopOf="@+id/medDog" />

        <TextView
            android:id="@+id/medNotesHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share"
            android:text="@string/notesBeHere"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/medNotes"
            app:layout_constraintStart_toStartOf="@+id/medNotes"
            app:layout_constraintTop_toBottomOf="@+id/medDog"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/medNotes"
            android:layout_width="336dp"
            android:layout_height="182dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="116dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/hintnotes"
            android:ems="10"
            android:fontFamily="@font/share"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:singleLine="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medDog" />

        <TextView
            android:id="@+id/medNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share"
            android:text="@string/medicine"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/medName"
            app:layout_constraintStart_toStartOf="@+id/medName" />

        <EditText
            android:id="@+id/medName"
            android:layout_width="218dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:breakStrategy="simple"
            android:hint="@string/hintMedicationGiven"
            android:ems="10"
            android:fontFamily="@font/share"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medDog" />

        <TextView
            android:id="@+id/medUnitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share"
            android:text="@string/unit"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/medUnit"
            app:layout_constraintStart_toStartOf="@+id/medUnit" />

        <EditText
            android:id="@+id/medUnit"
            android:layout_width="83dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/share"
            android:gravity="center"
            android:hint="@string/milligrams"
            android:maxLength="2"
            android:inputType="text"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/medName"
            app:layout_constraintTop_toBottomOf="@+id/medAmount" />

        <TextView
            android:id="@+id/medNickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:textSize="24sp"
            android:textColor="@color/appBackGround"
            android:backgroundTint="@color/appTextColor"
            app:layout_constraintBottom_toBottomOf="@+id/medDogImage"
            app:layout_constraintStart_toStartOf="@+id/medDogImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</LinearLayout>