<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activityToolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/appToolbarTextColor"
        android:background="@color/appToolbarBackGround">
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/appBackGround"
            tools:context=".Activities">

            <EditText
                android:id="@+id/activityTimeStart"
                android:layout_width="61dp"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/appTextColor"
                android:ems="10"
                android:fontFamily="@font/share"
                android:gravity="center_horizontal"
                android:autofillHints=""
                android:maxLength="5"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkOut" />

            <ToggleButton
                android:id="@+id/activityBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="55dp"
                android:checked="false"
                android:fontFamily="@font/share"
                android:textOff="@string/start"
                android:textOn="@string/stop"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/activitySaveButton"
                app:layout_constraintStart_toStartOf="@+id/activitySaveButton"
                app:layout_constraintTop_toTopOf="@+id/activityDateStart" />

            <EditText
                android:id="@+id/activityDateStart"
                android:layout_width="125dp"
                android:layout_height="55dp"
                android:ems="10"
                android:fontFamily="@font/share"
                android:gravity="center_horizontal"
                android:hint="@string/hintdate"
                android:inputType="date"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/activityElapsedTime"
                app:layout_constraintTop_toTopOf="@+id/activityTimeStop"
                android:autofillHints="" />

            <EditText
                android:id="@+id/activityElapsedTime"
                android:layout_width="125dp"
                android:layout_height="55dp"
                android:layout_marginStart="36dp"
                android:ems="10"
                android:fontFamily="@font/share"
                android:gravity="center_horizontal"
                android:hint="@string/hintElapsedtime"
                android:maxLength="5"
                android:text=""
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/activityTimeStart"
                app:layout_constraintTop_toTopOf="@+id/activityTimeStart"
                android:autofillHints="" />

            <EditText
                android:id="@+id/activityTimeStop"
                android:layout_width="61dp"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/appTextColor"
                android:ems="10"
                android:fontFamily="@font/share"
                android:gravity="center_horizontal"
                android:hint="@string/hintTimeStop"
                android:maxLength="5"
                android:text=""
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/activityTimeStart"
                app:layout_constraintTop_toBottomOf="@+id/activityTimeStart"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/activityDogImage"
                android:layout_width="413dp"
                android:layout_height="245dp"
                android:contentDescription="@string/profilepic"
                android:longClickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/whitedog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/whitedog" />


            <EditText
                android:id="@+id/activityNote"
                android:layout_width="337dp"
                android:layout_height="161dp"
                android:layout_marginTop="44dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"

                app:layout_constraintStart_toStartOf="@+id/activityTimeStop"
                app:layout_constraintTop_toBottomOf="@+id/activityDateStart"
                android:autofillHints="" />

            <CheckBox
                android:id="@+id/checkOut"
                android:layout_width="112dp"
                android:layout_height="41dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/share"
                android:text="@string/outing"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activityDogImage" />

            <CheckBox
                android:id="@+id/checkPlay"
                android:layout_width="112dp"
                android:layout_height="41dp"
                android:layout_marginStart="64dp"
                android:fontFamily="@font/share"
                android:text="@string/play"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/checkOut"
                app:layout_constraintTop_toTopOf="@+id/checkOut" />

            <TextView
                android:id="@+id/activityNoteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/share"
                android:labelFor="@id/activityNote"
                android:text="@string/notesBeHere"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/activityNote"
                app:layout_constraintStart_toStartOf="@+id/activityNote" />

            <TextView
                android:id="@+id/activityElapsedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/share"
                android:labelFor="@id/activityElapsedTime"
                android:text="@string/timeSpent"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/activityElapsedTime"
                app:layout_constraintStart_toStartOf="@+id/activityElapsedTime" />

            <TextView
                android:id="@+id/activityStopText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/share"
                android:labelFor="@id/activityTimeStop"
                android:text="@string/ended"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/activityTimeStop"
                app:layout_constraintStart_toStartOf="@+id/activityTimeStop" />

            <TextView
                android:id="@+id/activityDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/share"
                android:labelFor="@id/activityDateStart"
                android:text="@string/date"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/activityDateStart"
                app:layout_constraintStart_toStartOf="@+id/activityDateStart" />

            <TextView
                android:id="@+id/activityStartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/share"
                android:labelFor="@id/activityTimeStart"
                android:text="@string/start"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/activityTimeStart"
                app:layout_constraintStart_toStartOf="@+id/activityTimeStart" />


            <Button
                android:id="@+id/activitySaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="28dp"
                android:text="@string/save"
                app:layout_constraintBottom_toTopOf="@+id/activityBtn"
                app:layout_constraintStart_toEndOf="@+id/activityElapsedTime" />

            <TextView
                android:id="@+id/activityNickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="24dp"
                android:textSize="24sp"
                android:textColor="@color/appBackGround"
                android:backgroundTint="@color/appTextColor"
                app:layout_constraintBottom_toBottomOf="@+id/activityDogImage"
                app:layout_constraintStart_toStartOf="@+id/activityDogImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>